--- a/package.json
+++ b/package.json
@@ -1,45 +1,50 @@
 {
-  "name": "basic-editor",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@emotion/react": "^11.11.4",
-    "@emotion/styled": "^11.11.5",
-    "@mui/icons-material": "^5.15.20",
-    "@mui/material": "^5.15.20",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "bootstrap": "^5.3.3",
-    "quill": "^2.0.2",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-quill": "^2.0.0",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  }
+	"name": "next-pages-template",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"serve-partykit": "npx partykit serve"
+	},
+	"dependencies": {
+		"@nextui-org/react": "^2.4.2",
+		"@react-aria/visually-hidden": "3.8.12",
+		"@types/node": "20.5.7",
+		"@types/react": "18.3.3",
+		"@types/react-dom": "18.3.0",
+		"@typescript-eslint/eslint-plugin": "7.2.0",
+		"@typescript-eslint/parser": "7.2.0",
+		"autoprefixer": "10.4.19",
+		"clsx": "2.0.0",
+		"eslint": "^8.26.0",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-jsx-a11y": "^6.4.1",
+		"eslint-plugin-node": "^11.1.0",
+		"eslint-plugin-react": "^7.23.2",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"eslint-plugin-unused-imports": "^3.2.0",
+		"framer-motion": "~11.1.1",
+		"intl-messageformat": "^10.5.0",
+		"next": "^14.2.4",
+		"next-themes": "^0.2.1",
+		"partysocket": "1.0.1",
+		"postcss": "8.4.38",
+		"quill-cursors": "^4.0.3",
+		"react": "^18.3.1",
+		"react-dom": "^18.3.1",
+		"react-quill": "^2.0.0",
+		"tailwind-variants": "0.1.20",
+		"tailwindcss": "3.4.3",
+		"typescript": "5.0.4",
+		"y-partykit": "^0.0.29",
+		"y-quill": "^1.0.0"
+	},
+	"devDependencies": {
+		"eslint-config-prettier": "^9.1.0",
+		"eslint-plugin-prettier": "^5.1.3",
+		"partykit": "^0.0.107",
+		"prettier": "3.3.2"
+	}
 }
